--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "dev": "nodemon index.js --verbose",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
