--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "package": "electron-packager . arxivjs --platform=win32 --arch=x64 --out=dist --overwrite --ignore=arxivjsdata",
+    "package:win": "electron-packager . arxivjs --platform=win32 --arch=x64 --out=dist --overwrite --ignore=arxivjsdata --ignore=\"\\.env\"",
+    "package:linux": "electron-packager . arxivjs --platform=linux --arch=x64 --out=dist --overwrite --ignore=arxivjsdata --ignore=\"\\.env\"",
     "dev": "nodemon index.js --verbose --ignore arxivjsdata/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
