--- a/arxiview/package.json
+++ b/arxiview/package.json
@@ -14,10 +14,9 @@
   "description": "",
   "dependencies": {
     "axios": "^1.10.0",
-    "katex": "^0.16.22",
+    "marked": "^16.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-katex": "^3.1.0",
     "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
