--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "package:linux": "electron-packager . arxivjs --platform=linux --arch=x64 --out=dist --overwrite --ignore=arxivjsdata --ignore=\"\\.env\"",
     "dev": "nodemon index.js --verbose --ignore arxivjsdata/",
     "server": "node index.js",
+    "client": "cd arxiview && npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
