--- a/arxiview/package.json
+++ b/arxiview/package.json
@@ -25,7 +25,8 @@
     "marked": "^16.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.3"
+    "react-router-dom": "^7.6.3",
+    "yargs-parser": "^21.1.1"
   },
   "devDependencies": {
     "@types/react": "^19.1.8",
@@ -36,8 +37,7 @@
     "electron": "^37.2.1",
     "electron-builder": "^26.0.12",
     "vite": "^7.0.4",
-    "wait-on": "^8.0.3",
-    "yargs-parser": "^21.1.1"
+    "wait-on": "^8.0.3"
   },
   "build": {
     "appId": "com.arxivjs.arxiview",
