Refactor: Streamline build process and update project scripts
- Simplify run scripts: Rename `run_arxivjs_app/server` to `run_app/server` for brevity.
- Update Electron build configuration: Adjust `main.js` and `package.json` for streamlined Electron packaging.
- Integrate Vite build outputs: Update `index.html` and `.gitignore` to reflect new asset paths.
- Enhance documentation: Update `GEMINI.md` and `CLAUDE.md` with current project structure and development workflows.
- Refine styling: Adjust `src/index.css` for improved font handling and minor style cleanups.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 /.env
+/arxivjsdata/
+/dist/
 /node_modules/
-/arxivjsdata
-/dist
-/arxiview/node_modules/
-/release
-/public/assets
+/release/
+/temp/
